--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "cli_logging"
-version = "0.4.0"
+name = "cli_logging_moxad"
+version = "0.5.0"
 authors = [
   { name="RJ White", email="rj.white@moxad.com" },
 ]
@@ -18,3 +18,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Natural Language :: English"
 ]
+
+[project.urls]
+Homepage = "https://github.com/rjwhite/cli-logging"
+
