--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "cli_logging_moxad"
-version = "0.5.0"
+version = "0.6.0"
 authors = [
   { name="RJ White", email="rj.white@moxad.com" },
 ]
@@ -17,6 +17,10 @@ classifiers = [
     "Operating System :: POSIX :: Linux",
     "Intended Audience :: Developers",
     "Natural Language :: English"
+]
+
+dependencies = [
+    "colorlog>=6.9.0",
 ]
 
 [project.urls]
